# nl2sql

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
nl2sql/: js_code_plot_generator.py  nl2sql.py  requests_summary.py
test/: test_requests_summary_generation.py
