[tool.poetry]
name = "nl2sql"
version = "0.0.1"
description = "nl2sql is a natural language to SQL conversion streamlit app"
authors = ["Dimitar Petrunov"]
license = "MIT"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "nl2sql"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
